kiali/server/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: kiali-operator
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - traffic.local.io
