kiali/server/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: kiali-operator
spec:
  hosts:
    - traffic.local.io
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali.kiali-operator.svc.cluster.local
            port:
              number: 20001
